@@ -34,6 +34,7 @@
         <maven.compiler.target>25</maven.compiler.target>
         <!-- Dependency versions -->
         <jjwt.version>0.12.3</jjwt.version>
+        <lombok.version>1.18.46</lombok.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <caffeine.version>3.1.8</caffeine.version>
         <springdoc.version>2.3.0</springdoc.version>
@@ -111,6 +112,9 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
                         <release>25</release>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
                         <annotationProcessorPaths>
                             <!-- lombok must run before mapstruct -->
                             <path>
